--- a/.github/workflows/profile.yml
+++ b/.github/workflows/profile.yml
@@ -1,13 +1,16 @@
-# Visit https://github.com/lowlighter/metrics/blob/master/action.yml for full reference
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  schedule: [{ cron: "0 0 * * *" }]
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 * * * *"}]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  push: { branches: ["master", "main"] }
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
@@ -15,22 +18,23 @@ jobs:
           # The following scopes are required:
           #  - public_access (default scope)
           # The following additional scopes may be required:
-          #  - read:org  (for organization related metrics)
-          #  - read:user (for user related data)
-          #  - repo      (optional, if you want to include private repositories)
+          #  - read:org      (for organization related metrics)
+          #  - read:user     (for user related data)
+          #  - read:packages (for some packages related data)
+          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
           user: archie0732
-          config_timezone: Asia/Taipei
           template: classic
-          repositories_affiliations: owner, collaborator
+          base: header, activity, community, repositories, metadata
+          config_timezone: Asia/Taipei
           plugin_introduction: yes
-          plugin_habits: yes
-          plugin_lines: yes
-          plugin_languages: yes
-          plugin_languages_details: percentage
-          plugin_traffic: yes
-          plugin_wakatime: yes
-          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
-          plugin_wakatime_user: archie0732
+          plugin_introduction_title: yes
+          plugin_leetcode: yes
+          plugin_leetcode_limit_recent: 2
+          plugin_leetcode_limit_skills: 10
+          plugin_leetcode_sections: solved
+          plugin_leetcode_user: .archie0732.login
+          plugin_pagespeed: yes
+          plugin_pagespeed_url: .user.website
