--- a/.github/workflows/profile.yml
+++ b/.github/workflows/profile.yml
@@ -35,7 +35,7 @@ jobs:
           plugin_leetcode_limit_recent: 2
           plugin_leetcode_limit_skills: 10
           plugin_leetcode_sections: solved
-          plugin_leetcode_user: .archie0732.login
+          plugin_leetcode_user: archie0732
           plugin_pagespeed: yes
           plugin_pagespeed_url: .user.website
 
