--- a/.github/workflows/profile.yml
+++ b/.github/workflows/profile.yml
@@ -22,7 +22,7 @@ jobs:
           #  - read:user     (for user related data)
           #  - read:packages (for some packages related data)
           #  - repo          (optional, if you want to include private repositories)
-          token: ${{ secrets.SECRET_CODE }}
+          token: ${{ secrets.ARCHIE_TOKEN }}
 
           # Options
           user: archie0732
